# OpenKKND

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  UPDATES.md  __notes.txt
src/: CMakeLists.txt  Config.cpp  Config.h  Coroutine.cpp  Cursor.cpp  Cursor.h  Development.cpp  DirectSoundSdl2.h  Level.cpp  Map.cpp  Pathfind.cpp  Render.cpp  Render.h  RenderDrawHandlers.cpp  RenderDrawHandlers.h  SaveLoad.cpp  Script.cpp  Script.h  ScriptEvent.cpp  ScriptEvent.h  Sidebar.cpp  Sidebar.h  Sound.cpp  Sound.h  Sprite.cpp  Video.cpp  Video.h  _unsorted_data.cpp  _unsorted_data.h  hexrays-defs.h  kknd.cpp  kknd.h  malloc_hook.cpp  stru29.cpp  stru31.cpp  stru31.h
src/Application/: CMakeLists.txt  Game.cpp  GameWindowObserver.cpp
src/Application/Scripts/: Aircraft.cpp  Buildings.cpp  BuildingsMute.cpp  CMakeLists.txt  EnemyAI.cpp  GameMenu.cpp  GameMenu.h  Infantry.cpp  MachineShop.cpp  MainMenu.cpp  MainMenu.h  Mission.cpp  Projectiles.cpp  Scar.cpp  Schrap.cpp  Towers.cpp  Vehicles.cpp
src/Engine/: BuildingLimits.cpp  BuildingLimits.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityFactory.cpp
src/Engine/Infrastructure/: EntityRepository.cpp
src/Infrastructure/: CMakeLists.txt  DependencyInjection.h  File.cpp  Input.cpp  Input.h  InputKeyboardObserver.cpp  Log.cpp  Netz.cpp  Netz.h
src/Infrastructure/PlatformSpecific/: CMakeLists.txt  OsTools.h  OsToolsLinux.cpp  OsToolsWindows.cpp
src/Infrastructure/Renderer/: CMakeLists.txt  SdlRenderer.cpp
src/Infrastructure/Window/: CMakeLists.txt  SdlWindow.cpp  SdlWindow.h  Window.h  WindowFactory.cpp
